--- a/ognjenradovic/app/build.gradle
+++ b/ognjenradovic/app/build.gradle
@@ -5,9 +5,6 @@ plugins {
     // We dont use this right now
     id 'kotlin-parcelize'
 }
-kapt {
-    correctErrorTypes = true
-}
 android {
     compileSdkVersion 32
     buildToolsVersion "30.0.3"
@@ -108,8 +105,8 @@ dependencies {
     // Do not update codegen version it will produce compile error when used with moshi retrofit converter!
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 
-    implementation "com.airbnb.android:epoxy:5.0.0"
-    kapt "com.airbnb.android:epoxy-processor:5.0.0"
+//    implementation "com.airbnb.android:epoxy:5.0.0"
+//    kapt "com.airbnb.android:epoxy-processor:5.0.0"
 
 //    apply plugin: "kotlin-kapt"
 //    implementation "com.airbnb.android:epoxy:4.7.0"
